edit streaming_response function

--- a/ai_code_explainer.ipynb
+++ b/ai_code_explainer.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "94661efc-2912-4e3b-ac85-4bf79255bf75",
    "metadata": {},
    "outputs": [],
@@ -27,22 +27,26 @@
     "import requests\n",
     "import ollama\n",
     "from openai import OpenAI\n",
+    "from typing import Literal\n",
     "from dotenv import load_dotenv\n",
     "from IPython.display import Markdown, display, update_display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "10b92ee2-7af4-4589-9413-c29f49dc81d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def streaming_response(stream):\n",
+    "def streaming_response(stream, type:Literal[\"ollama\", \"openai\"]=\"ollama\"):\n",
     "    response = \"\"\n",
     "    display_handle = display(Markdown(\"\"), display_id=True)\n",
     "    for chunk in stream:\n",
-    "        response += chunk.choices[0].delta.content or \"\"\n",
+    "        if type == \"ollama\":\n",
+    "            response += chunk.choices[0].delta.content\n",
+    "        else:\n",
+    "            response += chunk.choices[0].delta.content or \"\"\n",
     "        response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
     "        update_display(Markdown(response), display_id=display_handle.display_id)"
    ]
@@ -437,7 +441,7 @@
   "kernelspec": {
    "display_name": "llms",
    "language": "python",
-   "name": "llms"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
